removed illegal characters in npm name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "EV Charging Station 1",
+  "name": "EV-Charging-Station-1",
   "nomadName": "EV-Charging-Station-1",
   "version": "1.0.0",
   "description": "Status of Charging Station 1",
