--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
-  "name": "Supply-chain-composite-node",
-  "nomadName": "Supply-chain-composite-node",
+  "name": "EV-Charger-composite-node",
+  "nomadName": "EV-Charger-composite-node",
   "version": "1.0.0",
-  "description": " a composite node that subscribes to three atomic nodes and then notifies a relevant party using twilio and sms.",
+  "description": " a composite node that subscribes to two atomic nodes and then notifies a EV driver that a charger is avaliable using twilio and sms.",
   "main": "sensor.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/The-Chanman/nomad-supply-chain-demo/"
+    "url": "git+https://github.com/The-Chanman/EV-charger-status/"
   },
   "author": "Eric Chan <echan@ideo.com>",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/The-Chanman/nomad-supply-chain-demo/issues"
+    "url": "https://github.com/The-Chanman/EV-charger-status/issues"
   },
-  "homepage": "https://github.com/The-Chanman/nomad-supply-chain-demo#readme",
+  "homepage": "https://github.com/The-Chanman/EV-charger-status#readme",
   "dependencies": {
     "moment": "^2.16.0",
     "nomad-stream": "0.0.6",
